Move category lists to the right so they flow more naturally on mobile (posts) Fixes #141

--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -90,7 +90,7 @@ $gallery-cell-colors:
     //@include outer-container;
     //@include clearfix;
     margin: auto;
-    padding: 1.5em 2.5em;
+    padding: 3em 2em;
     text-align: center;
     vertical-align: middle;
     display: flex;
