--- a/sass/modules/_layouts.scss
+++ b/sass/modules/_layouts.scss
@@ -135,7 +135,3 @@ body.kidsmith {
     color:white;
   }
 }
-
-.shift-on-mobile {
-  @include shift(12 of 12);
-}
